--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   path_provider: ^1.6.27  
   path: ^1.7.0
   sqflite: ^1.3.2+3
+  location: ^3.2.4
+  google_maps_flutter: ^1.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
